# laser-tag

./: README.md  rtsystems.atsln  rtsystems.atsuo  rtsystems.cpp  rtsystems.cppproj
Debug/: Makefile  makedep.mk  rtsystems.elf  rtsystems.hex  rtsystems.lss  rtsystems.map  rtsystems.srec
Debug/arduino/: HardwareSerial.d  Print.d  Stream.d  WString.d  new.d  wiring.d  wiring_analog.d  wiring_digital.d  wiring_pulse.d  wiring_shift.d
Debug/project3/: gun.d  test.d
Debug/project3/irobot/: irobot.d
Debug/project3/radio/: radio.d  spi.d
Debug/project3/rtos/: os.d
cmake-modules/: arduino.cmake  arduino_head.cmake  arduino_tail.cmake
project1/: filter.h  gun.cpp  gun.h  joystick.cpp  joystick.h  modified_servo.cpp  modified_servo.h  notes.txt  project1.ino  scheduler.cpp  scheduler.h  servo_control.cpp  servo_control.h  time.h
project1/servo_control.cpp/: servo_control.cpp.ino
project1_phase2/: drive.cpp  drive.h  joystick.cpp  joystick.h  project1_phase2.ino  scheduler.cpp  shoot.cpp  shoot.h  state.h  utilities.h
project2/: CMakeLists.txt  test.cpp  upload.sh
project2/rtos/: CMakeLists.txt  arduino_pins.h  error_code.h  kernel.h  os.cpp  os.h
project2/rtos/test/: CMakeLists.txt  test.cpp  test_main.cpp  test_periodic_create.cpp  test_periodic_preempt.cpp  test_periodic_preempt_timeout.cpp  test_periodic_schedule.cpp  test_periodic_schedule_fault.cpp  test_periodic_schedule_overlap.cpp  test_periodic_select_time.cpp  test_periodic_task_timeout.cpp  test_publish_periodic.cpp  test_publish_system.cpp  test_rr_create.cpp  test_rr_interleave.cpp  test_rr_preempt.cpp  test_service_broadcast.cpp  test_service_isr_to_periodic.cpp  test_service_isr_to_rr.cpp  test_service_isr_to_system.cpp  test_service_periodic_to_system.cpp  test_service_ping_pong.cpp  test_service_publish_time.cpp  test_service_rr_to_system.cpp  test_service_system_to_system.cpp  test_service_to_periodic.cpp  test_service_unicast.cpp  test_system_create.cpp  test_system_yield.cpp  test_time.cpp  test_util.h
project3/: CMakeLists.txt  arduino-upload.sh  arduino_config.h  gun.cpp  gun.hpp  radio_packets.hpp  test.cpp  util.h  world.hpp
project3/base/: CMakeLists.txt  base.cpp  test-terminal.cpp
project3/base_terminal/: CMakeLists.txt  comm.cpp  comm.hpp  main.cpp  main_win.cpp  main_win.hpp  protocol.h  serial.cpp  serial.hpp
project3/irobot/: CMakeLists.txt  irobot.cpp  irobot.hpp
project3/radio/: CMakeLists.txt  radio.h
project3/radio_packets/: global.hpp  local.hpp  radio_packets.hpp
project3/robot/: CMakeLists.txt  controller.cpp  controller.hpp  dummy.cpp  gun.cpp  gun.hpp  robot.cpp  sequencer.cpp  sequencer.hpp  sonar.cpp  sonar.hpp  test-drive.cpp  test-ir-receive.cpp  test-ir-transmit.cpp  test-ir.cpp  test-radio.cpp  test-sonar.cpp  test.cpp
project3/rtos/: CMakeLists.txt  arduino_pins.h  kernel.h  os.cpp  os.h
radio/: cops_and_robbers.h  radio.c  radio.cpp  radio.h  spi.h
report/: build.ninja  communication.gv  project1.rst  project1_phase2.rst  style.css
report/project2/: project2.rst
report/project3/: project3.rst
